Fixed popover display stretch bug

--- a/client/sass/base.sass
+++ b/client/sass/base.sass
@@ -120,3 +120,8 @@ $tablet-computer-boundary: 2*$phone-tablet-boundary
   -webkit-flex-wrap: $value
   -ms-flex-wrap: $value
   flex-wrap: $value
+
+=self-align($value: left)
+  -webkit-align-self: $value
+  -ms-flex-item-align: $value
+  align-self: $value
